<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="25dp"
                    android:text="@string/question_RAP1"
                    android:textStyle="bold"
                     />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="334dp"
                    android:layout_height="87dp"

                    android:layout_marginTop="20dp"
                    android:text="@string/answer_RAP1"
                     />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="40dp"
                    android:text="@string/question_board1"
                    android:textStyle="bold"
                     />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="349dp"
                    android:layout_height="65dp"

                    android:layout_marginTop="24dp"
                    android:text="@string/answer_board1"
                     />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="31dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="60dp"
                    android:text="@string/question_marching"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="32dp"
                    android:text="@string/answer_marching"
                     />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>